// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test parseQuery compound query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Clergy",
            },
          },
        },
      ],
    },
    Object {
      "$or": Array [
        Object {
          "pursuits": Object {
            "$elemMatch": Object {
              "pursuit": "diplomat",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery negative OR query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$ne": Object {
              "$elemMatch": Object {
                "group": "Diplomacy",
              },
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Clergy",
            },
          },
        },
      ],
    },
    Object {
      "$or": Array [
        Object {
          "pursuits": Object {
            "$elemMatch": Object {
              "pursuit": "diplomat",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery negative query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$ne": Object {
              "$elemMatch": Object {
                "group": "Diplomacy",
              },
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Clergy",
            },
          },
        },
      ],
    },
    Object {
      "$or": Array [
        Object {
          "pursuits": Object {
            "$elemMatch": Object {
              "pursuit": "diplomat",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery query AND with object 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Democracy",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery query OR with object 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery query with object 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery single query with string - should give fuzzy search 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": Object {
                "$regex": /Diplomacy/gi,
              },
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates month range + single year 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$gte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$lte": 1700,
                      },
                    },
                  ],
                },
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$gte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$lte": 10,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 10,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 10,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates month range + year range 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$gte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$lte": 1780,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1700,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1780,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1780,
                          },
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$gte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$lte": 10,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 10,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 10,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates month range 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates single month 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates single year 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$gte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$lte": 1700,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates single year and single month 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$gte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$lte": 1700,
                      },
                    },
                  ],
                },
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 5,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 5,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates year range 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$gte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$lte": 1780,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1700,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1780,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1780,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with freeSearch freeSearch query with "and" operator 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with freeSearch freeSearch query with negatives 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$and": Array [
            Object {
              "biography": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with freeSearch regular freeSearch query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;
